--- a/views/login/login.hbs
+++ b/views/login/login.hbs
@@ -151,7 +151,7 @@
 <body style="background-color: rgba(77, 82, 80, 0.123);">
     <div class="container">
         <div class="heading">Sign In</div>
-        <form action="" class="form">
+        <form action="/login" class="form" method="post">
           <input required="" class="input" type="email" name="email" id="email" placeholder="E-mail">
           <input required="" class="input" type="password" name="password" id="password" placeholder="Password">
           <span class="forgot-password"><a href="#">Forgot Password ?</a></span>
