--- a/views/login/login.hbs
+++ b/views/login/login.hbs
@@ -152,7 +152,7 @@
     <div class="container">
         <div class="heading">Sign In</div>
         <form action="/login" class="form" method="post">
-          <input required="" class="input" type="email" name="cin" id="email" placeholder="E-mail">
+          <input required="" class="input" type="text" name="cin" id="cin" placeholder="cin">
           <input required="" class="input" type="password" name="password" id="password" placeholder="Password">
           <span class="forgot-password"><a href="#">Forgot Password ?</a></span>
           <input class="login-button" type="submit" value="Sign In">
