--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,98 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>app</title>
     <style>
-        .card {
-  width: 300px;
-  height: 220px;
-  background-color: rgb(255, 255, 255);
-  border-radius: 8px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 20px 30px;
-  gap: 13px;
-  position: relative;
-  overflow: hidden;
-  box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.062);
+/* From Uiverse.io by alexruix */ 
+.card {
+ width: 190px;
+ height: 254px;
+ padding: .8em;
+ background: #f5f5f5;
+ position: relative;
+ overflow: visible;
+ box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+ margin-bottom: 20px;
 }
 
-#cookieSvg {
-  width: 50px;
+.card-img {
+ background-color: #ffcaa6;
+ height: 40%;
+ width: 100%;
+ border-radius: .5rem;
+ transition: .3s ease;
 }
 
-#cookieSvg g path {
-  fill: rgb(97, 81, 81);
+.card-info {
+ padding-top: 10%;
 }
 
-.cookieHeading {
-  font-size: 1.2em;
-  font-weight: 800;
-  color: rgb(26, 26, 26);
+svg {
+ width: 20px;
+ height: 20px;
 }
 
-.cookieDescription {
-  text-align: center;
-  font-size: 0.7em;
-  font-weight: 600;
-  color: rgb(99, 99, 99);
+.card-footer {
+ width: 100%;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ padding-top: 10px;
+ border-top: 1px solid #ddd;
 }
 
-.cookieDescription a {
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246);
+/*Text*/
+.text-title {
+ font-weight: 900;
+ font-size: 1.2em;
+ line-height: 1.5;
 }
 
-.cookieDescription a:hover {
-  -webkit-text-decoration-line: underline;
-  text-decoration-line: underline;
+.text-body {
+ font-size: .9em;
+ padding-bottom: 10px;
 }
 
-.buttonContainer {
-  display: flex;
-  gap: 20px;
-  flex-direction: row;
+/*Button*/
+.card-button {
+ border: 1px solid #252525;
+ display: flex;
+ padding: .3em;
+ cursor: pointer;
+ border-radius: 50px;
+ transition: .3s ease-in-out;
+}
+.image{
+  width: 100%;
+  height: 100%;
 }
 
-.acceptButton {
-  width: 80px;
-  height: 30px;
-  background-color: #7b57ff;
-  transition-duration: .2s;
-  border: none;
-  color: rgb(241, 241, 241);
-  cursor: pointer;
-  font-weight: 600;
-  border-radius: 20px;
-  box-shadow: 0 4px 6px -1px #977ef3, 0 2px 4px -1px #977ef3;
-  transition: all .6s ease;
+/*Hover*/
+.card-img:hover {
+ transform: translateY(-25%);
+ box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
 }
 
-.declineButton {
-  width: 80px;
-  height: 30px;
-  background-color: #dadada;
-  transition-duration: .2s;
-  color: rgb(46, 46, 46);
-  border: none;
-  cursor: not-allowed;
-  font-weight: 600;
-  border-radius: 20px;
-  box-shadow: 0 4px 6px -1px #bebdbd, 0 2px 4px -1px #bebdbd;
-  transition: all .6s ease;
+.card-button:hover {
+ border: 1px solid #ffcaa6;
+ background-color: #ffcaa6;
 }
 
-.declineButton:hover {
-  background-color: #ebebeb;
-  box-shadow: 0 10px 15px -3px #bebdbd, 0 4px 6px -2px #bebdbd;
-  transition-duration: .2s;
-}
-
-.acceptButton:hover {
-  background-color: #9173ff;
-  box-shadow: 0 10px 15px -3px #977ef3, 0 4px 6px -2px #977ef3;
-  transition-duration: .2s;
-}
     </style>
 </head>
 <body>
