--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>app</title>
+    <script>
+        function like(id){
+            console.log(id);
+            fetch(`http://localhost:3000/api/like/${id}`,{
+                method:"get"
+            }).then(console.log("done"));
+            window.location.reload();
+        }
+    </script>
     <style>
 /* From Uiverse.io by alexruix */ 
 .card {
@@ -14,7 +23,6 @@
  position: relative;
  overflow: visible;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
- margin-bottom: 20px;
 }
 
 .card-img {
